Fixed range highlight spacing (#388)

--- a/packages/canvas-panel-search/src/components/RangeHighlights/RangeHighlights.scss
+++ b/packages/canvas-panel-search/src/components/RangeHighlights/RangeHighlights.scss
@@ -5,8 +5,8 @@ $range-colour: #018786 !default;
   display: flex;
   width: 100%;
   padding-top: 5px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 3px;
+  margin-right: 3px;
   box-sizing: border-box;
   height: 20px;
 
